--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "Khiemld",
   "license": "MIT",
   "scripts": {
-    "server": "nodemon src/server.ts"
+    "server": "nodemon src/server.ts",
+    "build": "webpack",
+    "start" : "cross-env NODE_ENV=production node dist/server.js",
+    "run:dev": "cross-env NODE_ENV=development nodemon dist/server.js",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -39,10 +43,19 @@
     "@types/morgan": "^1.9.4",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "cross-env": "^7.0.3",
+    "eslint": "^8.39.0",
     "nodemon": "^2.0.22",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.0.4"
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "typescript": "^5.0.4",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
