--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended",
+      "plugin:@typescript-eslint/recommended"
       // "plugin:@shopify/esnext"
     ],
     "rules": {
