--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "server": "nodemon src/server.ts",
     "build": "webpack",
-    "start" : "node dist/server.js",
+    "start": "node dist/server.js",
     "run:dev": "cross-env NODE_ENV=development nodemon dist/server.js",
     "lint": "eslint . --ext .ts"
   },
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "firebase": "^9.21.0",
     "gravatar": "^1.8.2",
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
