add upload image

--- a/.env
+++ b/.env
@@ -2,4 +2,20 @@ NODE_ENV = "development"
 
 MONGODB_URI = "mongodb+srv://khiem_ld:jJIDIFckQDROcmey@master.dqmix4g.mongodb.net/appcan"
 
-JWT_TOKEN_SECRET = "tokensecret";
+JWT_TOKEN_SECRET = "tokensecret"
+
+API_KEY = "AIzaSyB_Dqq8XRa69jkevbZNib8DLc7GQHf4y_I"
+
+AUTH_DOMAIN = "can-app-image.firebaseapp.com"
+
+PROJECT_ID = "can-app-image"
+
+STORAGE_BUCKET = "can-app-image.appspot.com"
+
+MESSAGING_SENDER_ID = "597912193353"
+
+APP_ID = "1:597912193353:web:86a0a32c9cfbace836f298"
+
+MEASUREMENT_ID = "G-TRVMMMCL3Z"
+
+FIRESTORE_DB_URL = "https://can-app-image.firebaseapp.com"
