--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "@types/node": "^20.1.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
@@ -26,7 +27,7 @@
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0",
+    "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^4.6.2",
